# rfp-proposal-generator

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: .env.example  app.py  cals_prop2_pred.py  classification_prop_model.py  config.py  delet_weaviate.py  extract_doc.py  wsgi.py
backend/api/: conversation.py  decorators.py  orchestrator.py  shared_sessions.py  stock_doc.py  stock_prop.py
backend/services/: calssification_doc_model.py  pipelines.py  predict3.py  sections-label.json  stock_doc_service.py  stock_prop_service.py  supabase_client.py  train_sections.json  train_sections2.json  train_sections_propositions.json  training_data_propositions.json
backend/services/agents/: conversation_manager.py  embedding_worker.py  orchestrateur_langgraph.py  tools2.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/template/: tem.json  template.html
frontend/src/: APP3.css  App.css  App.jsx  App2.css  App2.jsx  Home.css  Home.jsx  Ro.jsx  Setting.css  UploadDocument.css  UploadDocument.jsx  dashboard.css  dashboard.jsx  homme.jsx  index.css  main.jsx  setting.jsx
frontend/src/api/: auth.js  http.js
frontend/src/auth/: AuthContext.jsx  PrivateRoute.jsx  PublicRoute.jsx
frontend/src/components/: AddButton.jsx  ChatWindow.jsx  ConfirmDialog.jsx  DocumentForm.jsx  DocumentList.jsx  DocumentPreview.jsx  Filter.jsx  FilterProp.jsx  Header.jsx  InstructionInput.jsx  Modal.jsx  SectionList.jsx  Sidebar.jsx  Sidebarh.jsx  StyledAlert.jsx  TemplateForm.jsx  TemplateSelector.jsx  TiptapEditor.css  TiptapEditor.jsx  Toasts.jsx  generation-card.jsx  main-content.jsx
frontend/src/hooks/: DashboardHooks.js
